--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1557,3 +1557,25 @@ year = {2018}
   journal={The IEEE Signal Processing Society},
   year={1998}
 }
+
+@misc{noisyphase1,
+      title={WHAM!: Extending Speech Separation to Noisy Environments}, 
+      author={Gordon Wichern and Joe Antognini and Michael Flynn and Licheng Richard Zhu and Emmett McQuinn and Dwight Crow and Ethan Manilow and Jonathan Le Roux},
+      year={2019},
+      eprint={1907.01160},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@article{noisyphase2,
+author = {Mayer,Florian  and Williamson,Donald S.  and Mowlaee,Pejman  and Wang,DeLiang },
+title = {Impact of phase estimation on single-channel speech separation based on time-frequency masking},
+journal = {The Journal of the Acoustical Society of America},
+volume = {141},
+number = {6},
+pages = {4668-4679},
+year = {2017},
+doi = {10.1121/1.4986647},
+URL = {https://doi.org/10.1121/1.4986647},
+eprint = {https://doi.org/10.1121/1.4986647}
+}
