Add abstract/acknowledge ch0

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -761,7 +761,7 @@ In UMX, a deep neural network is used to estimate the magnitude spectrograms of 
 	\label{fig:umxes}
 \end{figure}
 
-\textcite{xumx} combined the 4 separate target networks into a single model to apply the loss functions and optimizations jointly across all 4 targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients in UMX.
+\textcite{xumx} combined the 4 separate target networks into a single model to apply the loss functions and optimizations jointly across all 4 targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients.
 
 \subsubsection{Convolutional denoising autoencoders}
 
