--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -5,13 +5,13 @@
 
 \chaptertodo{
 do boxplot for different sizes of STFT vs. chosen sliCQ - with cupy thing\\
-selected spectrograms showing the sliCQ transform vs. the STFT\\
+selected spectrograms showing the sliCQ Transform vs. the STFT\\
 table of network learning parameters etc. from those repos (and scripts/train.py defaults)\\
 }
 
-\subsection{sliCQ transform performance analysis}
+\subsection{sliCQ Transform performance analysis}
 
-\subsection{sliCQ transform parameter search}
+\subsection{sliCQ Transform parameter search}
 
 \subsubsection{Comparing different sliCQ and STFT configurations}
 
