--- a/latex/mdx_townhall_aug21.tex
+++ b/latex/mdx_townhall_aug21.tex
@@ -99,7 +99,7 @@
 	\frametitle{Improving harmonic/percussive source separation (HPSS)}
 	\begin{enumerate}
 	\item
-		Short-time Fourier transform (STFT) window size matters per-target\footfullcite{tftradeoff1, tftradeoff2}
+		Short-time Fourier Transform (STFT) window size matters per-target\footfullcite{tftradeoff1, tftradeoff2}
 	\item
 		From musical and auditory aspects, frequency resolution should increase from high to low frequencies (vice-versa for time resolution)\footfullcite{cqtransient}
 	\item
