--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -42,7 +42,7 @@
 \section{Introduction / Motivation}
 
 
-The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent music in computational musical algorithms. Despite its popularity, the STFT limited by a fixed and bounded time-frequency resolution, controlled by the window size. In the task of music source separation or demixing (\cite{musicsepgood}), a stereo or mono recording of a mixed song is decomposed or ``demixed'' into its constituent sources, which are typically isolated instruments (e.g. drums, bass, vocals). Machine learning models for music source separation with the STFT have achieved recent success (\cite{sisec2018}). However, choosing the appropriate time-frequency resolution for the STFT with the window size is a crucial step which can significantly affect demixing results (\cite{tftradeoff1}).
+The Short-Time Fourier Transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier Transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent music in computational musical algorithms. Despite its popularity, the STFT limited by a fixed and bounded time-frequency resolution, controlled by the window size. In the task of music source separation or demixing (\cite{musicsepgood}), a stereo or mono recording of a mixed song is decomposed or ``demixed'' into its constituent sources, which are typically isolated instruments (e.g. drums, bass, vocals). Machine learning models for music source separation with the STFT have achieved recent success (\cite{sisec2018}). However, choosing the appropriate time-frequency resolution for the STFT with the window size is a crucial step which can significantly affect demixing results (\cite{tftradeoff1}).
 
  \textcite{doerflerphd} suggests that from auditory and musical motivations, musical signals should be analyzed with long windows in the low frequency regions to capture detailed harmonic information, and short windows in the high frequency regions to capture transients with sharp temporal localization. The sliCQ Transform (\cite{invertiblecqt}), or sliCQT, is the realtime variant of the Nonstationary Gabor Transform (\cite{balazs}), an STFT-like transform with a perfect inverse where the windows are varied with time to adapt the time-frequency resolution to fit the desired analysis characteristics. An important application of the sliCQT is to implement the constant-Q transform (CQT) for music (\cite{jbrown}). In this thesis, the STFT is replaced with the sliCQT in Open-Unmix (\cite{umx}), a neural network for music demixing. The proposed model demonstrates a viable and flexible starting point for spectral demixing using the sliCQT.
 
