--- a/latex/ch1_introduction.tex
+++ b/latex/ch1_introduction.tex
@@ -4,11 +4,11 @@
 \section{Introduction}
 \label{sec:intro}
 
-The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave (\cite[Chapter~4]{melbook}). Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier transform (\cite[Chapter~2]{melbook}).
+The study of acoustic signals forms the core of many fields including sonar, seismology, audio, music, and speech. Acoustic signals are functions of time, representing the evolving amplitude of the sound pressure wave (\cite[Chapter~4]{melbook}). Another way to characterize acoustic signals is by their frequency components, which can be computed from the Fourier Transform (\cite[Chapter~2]{melbook}).
 
-One downside of the Fourier transform is that it contains no temporal information -- the Fourier transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time (\cite{gabordiagrams}). Many important signals such as speech and music contain frequency components that change with time (\cite{gabor1946}). However, Fourier analysis alone is not enough to represent variable-frequency sounds. For these signals, joint time-frequency analysis is an essential tool.
+One downside of the Fourier Transform is that it contains no temporal information -- the Fourier Transform represents the frequency components of an acoustic signal by a sum of infinite sinusoids, but it does not describe how these frequencies evolve with time (\cite{gabordiagrams}). Many important signals such as speech and music contain frequency components that change with time (\cite{gabor1946}). However, Fourier analysis alone is not enough to represent variable-frequency sounds. For these signals, joint time-frequency analysis is an essential tool.
 
-Time-frequency analysis is performed by multiplying the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier transform of each windowed section. This is also referred to as the short-time Fourier transform (STFT) or spectrogram (\cite[Chapter~3]{melbook}). \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
+Time-frequency analysis is performed by multiplying the signal being studied by finite, consecutive windows of a short duration, and taking the Fourier Transform of each windowed section. This is also referred to as the Short-Time Fourier Transform (STFT) or spectrogram (\cite[Chapter~3]{melbook}). \textcite{melbook} describe the resulting spectral analysis as an important technique in analyzing and understanding audio that has been in use since the 1930s.
 
 The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window (\cite{gabor1946, gabordiagrams}). Improving the fixed time-frequency resolution of the STFT-based spectrogram in the visualization and analysis of general audio is an important direction of research (\cite{bettertfres1, bettertfres2}).
 
@@ -38,7 +38,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT (\cite{dictionary}).
 
-The constant-Q transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instruments and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original constant-Q transform and the Fourier transform is shown in \ref{fig:violin}. From the use of short windows in the high frequencies, the CQT demonstrates good time resolution (\cite{cqtransient}) in the region of transients and broadband signals, which are important for timbre and instrument identification (\cite{timbretransients1, timbretransients2}).
+The constant-Q transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instruments and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original constant-Q transform and the Fourier Transform is shown in \ref{fig:violin}. From the use of short windows in the high frequencies, the CQT demonstrates good time resolution (\cite{cqtransient}) in the region of transients and broadband signals, which are important for timbre and instrument identification (\cite{timbretransients1, timbretransients2}).
 
 \begin{figure}[ht]
 	\centering
@@ -49,7 +49,7 @@ The constant-Q transform was originally proposed by \textcite{jbrown} to analyze
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the constant-Q transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT) as a time-frequency transform with a varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the window size on which the Fourier transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the constant-Q transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT) as a time-frequency transform with a varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the window size on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
@@ -62,20 +62,20 @@ Building on the Gabor transform (or STFT), and using the constant-Q transform as
 
 Some music demixing literature (\cite{fitzgerald1, driedger, tftradeoff1, tftradeoff2}) describe the use of different window sizes of the STFT to improve source separation performance. In contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which can replace the need to explicitly trade-off of time and frequency resolution.
 
-Other music demixing systems have been proposed that use the CQT instead of the STFT (\cite{fitzgerald2, cqtseparation, bettermusicsep}). However, these papers used implementations of the CQT which lacked a stable inverse (\cite{lackinverse}), and for which different approximate inversion schemes have been proposed (\cite{klapuricqt, fitzgeraldcqt}). The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT (\cite{invertiblecqt, variableq1}). The sliCQ transform, introduced by \textcite{slicq}, computes the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQ transform can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, e.g. musical or psychoacoustic scales.
+Other music demixing systems have been proposed that use the CQT instead of the STFT (\cite{fitzgerald2, cqtseparation, bettermusicsep}). However, these papers used implementations of the CQT which lacked a stable inverse (\cite{lackinverse}), and for which different approximate inversion schemes have been proposed (\cite{klapuricqt, fitzgeraldcqt}). The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT (\cite{invertiblecqt, variableq1}). The sliCQ Transform, introduced by \textcite{slicq}, computes the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQ Transform can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, e.g. musical or psychoacoustic scales.
 
-Additionally, there are papers that describe frequency-warped transforms, with an interest in using nonlinear musical or auditory frequency scales for specific applications (\cite{warped1, warped2, earlywarped1, earlywarped2, warpedcomparison, warpedpsycho}). The NSGT and sliCQ transform, with their support for arbitrary frequency scales with perfect invertibility, is therefore of interest as the best implementation choice for these various frequency warping schemes, and as a general platform for frequency analysis of audio with nonlinear frequency scales. Finally, the NSGT and sliCQ transforms have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
+Additionally, there are papers that describe frequency-warped transforms, with an interest in using nonlinear musical or auditory frequency scales for specific applications (\cite{warped1, warped2, earlywarped1, earlywarped2, warpedcomparison, warpedpsycho}). The NSGT and sliCQ Transform, with their support for arbitrary frequency scales with perfect invertibility, is therefore of interest as the best implementation choice for these various frequency warping schemes, and as a general platform for frequency analysis of audio with nonlinear frequency scales. Finally, the NSGT and sliCQ Transforms have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
 
-In this thesis, \textcite{umx}'s deep neural network for music demixing, which is based on the STFT, will be considered as the starting point. It is chosen for being fully open-source\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further research. The objective of this thesis is to adapt Open-Unmix to use the sliCQ transform instead of the STFT. The goal is to present a working music demixing application with the sliCQ transform as a starting point for future systems that can benefit from application-specific and optimal time-frequency resolution, without needing to write custom frequency warping schemes or being constrained by the fixed-resolution STFT.
+In this thesis, \textcite{umx}'s deep neural network for music demixing, which is based on the STFT, will be considered as the starting point. It is chosen for being fully open-source\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further research. The objective of this thesis is to adapt Open-Unmix to use the sliCQ Transform instead of the STFT. The goal is to present a working music demixing application with the sliCQ Transform as a starting point for future systems that can benefit from application-specific and optimal time-frequency resolution, without needing to write custom frequency warping schemes or being constrained by the fixed-resolution STFT.
 
 \subsection{Contribution and results}
 
-The first contribution of this thesis is the adaptation of the reference Python NSGT and sliCQ library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch (\cite{pytorch}), a modern deep learning framework. This allows the NSGT and sliCQ transforms to be computed on the graphical processing unit (GPU), which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks (\cite{pytorch}). The resulting library, released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQ transform in any GPU-based machine or deep learning model.
+The first contribution of this thesis is the adaptation of the reference Python NSGT and sliCQ library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch (\cite{pytorch}), a modern deep learning framework. This allows the NSGT and sliCQ Transforms to be computed on the graphical processing unit (GPU), which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks (\cite{pytorch}). The resulting library, released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQ Transform in any GPU-based machine or deep learning model.
 
-The second contribution of this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing (\cite{umx}) to use the sliCQ transform. Ideas were also incorporated from CrossNet-OpenUnmix (\cite{xumx}), which is an adaptation Open-Unmix. The final result, named \textit{xumx-sliCQ} and also released as open-source software,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} was a successful neural network which could perform the task of music source separation using the sliCQ transform. It scored lower than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research. Variations of sliCQ parameters and neural network architectures are among the possible angles for improvement.
+The second contribution of this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing (\cite{umx}) to use the sliCQ Transform. Ideas were also incorporated from CrossNet-OpenUnmix (\cite{xumx}), which is an adaptation Open-Unmix. The final result, named \textit{xumx-sliCQ} and also released as open-source software,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} was a successful neural network which could perform the task of music source separation using the sliCQ Transform. It scored lower than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research. Variations of sliCQ parameters and neural network architectures are among the possible angles for improvement.
 
 \subsection{Outline}
 
-This thesis is organized as follows. Chapter 2 covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier transform, STFT, CQT, NSGT, and sliCQ transforms. It also presents an overview of machine learning for audio and music signals and a survey on the task of music demixing. Chapter 3 describes the methodology for the two objectives of the thesis -- the PyTorch adaptation of the NSGT and sliCQ library, and the replacement of the STFT with the sliCQ transform inside Open-Unmix. Chapter 4 shows the experiments and results, and chapter 5 discusses the results and concludes the thesis.
+This thesis is organized as follows. Chapter 2 covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQ Transforms. It also presents an overview of machine learning for audio and music signals and a survey on the task of music demixing. Chapter 3 describes the methodology for the two objectives of the thesis -- the PyTorch adaptation of the NSGT and sliCQ library, and the replacement of the STFT with the sliCQ Transform inside Open-Unmix. Chapter 4 shows the experiments and results, and chapter 5 discusses the results and concludes the thesis.
 
 \end{document}
