--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -2,6 +2,7 @@
 \begin{document}
 
 \section{Experiment}
+\label{sec:experiment}
 
 \chaptertodo{
 do boxplot for different sizes of STFT vs. chosen sliCQ - with cupy thing\\
